# mcp-crewd-rs

./: .gitignore  Cargo.toml  README.md  SPEC.md  THREAT_MODEL.md  server.json
.github/workflows/: ci.yml  release.yml
crates/crew/: Cargo.toml
crates/crew/src/: lib.rs  main.rs  mcp_shim.rs  ops.rs
crates/crew/tests/: cli.rs  mcp_shim.rs
crates/crewd/: Cargo.toml
crates/crewd-core/: Cargo.toml
crates/crewd-core/src/: acl.rs  adapter.rs  audit.rs  canonical.rs  cells.rs  engine.rs  error.rs  jobs.rs  lib.rs  principal.rs  quota.rs  spawn.rs  state.rs  store.rs  threads.rs  tickets.rs  types.rs  validators.rs  wire.rs
crates/crewd/src/: auth.rs  config.rs  delivery.rs  handlers.rs  lib.rs  main.rs  scheduler.rs  server.rs  supervisor.rs  testkit.rs
crates/crewd/src/engines/: child.rs  claude.rs  codex.rs  fake.rs  mod.rs  pi.rs
crates/crewd/tests/: conformance_a.rs  conformance_b.rs  contract_codex.rs  fabric_chaos.rs  fabric_core.rs  fake_engine_bin.rs  hardening.rs  regression_audit3.rs  tools.rs
shim/: claude-shim.mjs  package.json
skills/crew/: SKILL.md
skills/crew/scripts/: crew-mcp-driver.py
tests/fixtures/: env-dump.mjs  fake-claude-shim.mjs  mock-codex-appserver.mjs  pi-replay.mjs  pi-trace.ndjson
