[workspace]
resolver = "2"
members = ["crates/crewd-core", "crates/crewd", "crates/crew"]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/DioNanos/mcp-crewd-rs"
description = "crewd — cell fabric daemon for AI agents: spawn and coordinate Claude/Codex/pi worker cells over MCP (Unix socket, SQLite, append-only audit)"
keywords = ["mcp", "agents", "orchestration", "claude", "codex"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
sha2 = "0.10"
toml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustix = { version = "0.38", features = ["net", "fs"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
tempfile = "3"
