[package]
name = "crewd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
toml.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
tracing.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
